css/woocommerce.css
@charset "UTF-8";

.woocommerce #respond input#submit,
.woocommerce a.button,
.woocommerce button.button,
.woocommerce input.button {
    color: var(--light);
    background-color: var(--primary);
}

.woocommerce #respond input#submit:hover,
.woocommerce a.button:hover,
.woocommerce button.button:hover,
.woocommerce input.button:hover {
    color: var(--light);
    background-color: var(--dark);
}

.woocommerce #respond input#submit.loading,
.woocommerce a.button.loading,
.woocommerce button.button.loading,
.woocommerce input.button.loading {
    opacity: 1;
}


.woocommerce-input-wrapper {
    width: 100%
}

figure.woocommerce-product-gallery__wrapper {
    max-width: inherit !important
}

.woocommerce a.added_to_cart {
    vertical-align: middle;
}

.select2-container--default .select2-selection--single {
    background-color: #fff;
    border: 1px solid #cccccc;
    border-radius: 4px;
    padding: 3px;
    height: 36px;
}

.woocommerce a.added_to_cart {
    vertical-align: middle;
    display: block;
    position: absolute;
    top: 0px;
    background-color: #333333;
    padding: 0px 20px;
    width: 100%;
    text-align: center;
}

.woocommerce span.onsale {
    padding: 0px;
}

.woocommerce div.product .woocommerce-tabs ul.tabs li.active {
    border-top: 3px solid #333333;
    border-radius: 0;
    border-left: 0px;
    border-right: 0px;
}

.woocommerce div.product .woocommerce-tabs ul.tabs li {
    border-top: 3px solid #dddddd;
    border-radius: 0;
    border-left: 0px;
    border-bottom-color: #fff;
    background-color: #ffffff;
    border-right: 0px;
    z-index: 1;
}

.woocommerce div.product .woocommerce-tabs ul.tabs li::after,
.woocommerce div.product .woocommerce-tabs ul.tabs li::before {
    border: none;
    position: relative;
}

.woocommerce div.product .woocommerce-tabs ul.tabs::before {
    border: none;
}

.woocommerce-MyAccount-navigation .list-group-item.is-active,
.woocommerce-MyAccount-navigation .list-group-item:hover {
    background-color: #333333;
}

.woocommerce-MyAccount-navigation .list-group-item.is-active a,
.woocommerce-MyAccount-navigation .list-group-item:hover a {
    color: #ffffff;
}

.woocommerce-MyAccount-navigation .list-group-item.is-active,
.woocommerce-MyAccount-navigation .list-group-item:hover {
    background-color: var(--primary);
}

.close-mini-cart {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 10;
    opacity: 0;
    visibility: hidden;
    background-color: rgba(0, 0, 0, .4);
    transition: opacity .25s ease, visibility 0s ease .25s;
}

.justg-scroll-content {
    position: absolute;
    top: 0px;
    bottom: 0px;
    width:100%;
    overflow: auto;
    overflow-x: hidden;
}

.cart-side-opened {
    opacity: 1;
    visibility: visible;
    transition: opacity .25s ease, visibility 0s ease;
}

.cart-widget-side .widget_shopping_cart {
    position: relative;
    display: flex;
    flex: 1 1 auto;
    align-items: stretch;
    flex-direction: column;
}

.cart-widget-side .widget_shopping_cart_content {
    display: flex;
    flex: 1 1 auto;
    align-items: stretch;
    flex-direction: column;
    justify-content: space-between;
}

.cart-widget-side {
    position: fixed;
    display: flex;
    flex-direction: column;
    top: 0;
    bottom: 0;
    z-index: 99999;
    overflow: hidden;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
    width: 340px;
    background-color: #FFF;
    transition: -webkit-transform .25s ease;
    transition: transform .25s ease;
    transition: transform .25s ease, -webkit-transform .25s ease;
    right: 0;
    left: auto;
    -webkit-transform: translate3d(340px, 0, 0);
    transform: translate3d(340px, 0, 0);
}

.woocommerce ul.cart_list li img, .woocommerce ul.product_list_widget li img {
    width: 80px;
    height: auto;
    box-shadow: none;
    padding-right: 10px;
}

.cart-widget-side.cart-widget-side-opened {
    -webkit-transform: none;
    transform: none;
    transition: -webkit-transform .25s ease;
    transition: transform .25s ease;
    transition: transform .25s ease, -webkit-transform .25s ease;
}

.justg-scroll {
    position: relative;
    flex: 1 1 auto;
    overflow: hidden;
    width: 100%;
    height: 100%;
}

.widget-heading {
    padding: 20px 15px 0px 15px;
    border-bottom: 3px solid #efefef;
}

.widget_shopping_cart .mini_cart_item {
    display: flex;
    align-items: flex-start;
    flex-direction: row;
    padding: 10px !important;
    border-bottom: 1px solid #efefef;
}

.justg-scroll-content .remove {
    right: 0;
    z-index: 2;
    left: auto !important;
    margin-bottom: 0;
    padding-right: 0;
}

.cart-widget-side .shopping-cart-widget-footer {
    flex: 0 0 auto;
    padding: 10px 15px 0px;
    border-top: 1px solid #efefef;
}

a.cart-contents {
    color: var(--primary);
}

.product_list_widget li>a {
    color: var(--primary);
}

.woocommerce .widget_shopping_cart .total,
.woocommerce.widget_shopping_cart .total {
    margin-top: 10px;
    border: none !important;
    color: var(--dark);
    text-transform: uppercase;
}

.wishlist-fix {
    display: block;
    position: absolute;
    top: 16px;
    left: 16px;
    z-index: 5;
    width: 24px;
    height: 24px;
    outline: none;
    border: none;
}

.wishlist-toggle {}

.woocommerce form .password-input {
    width: 100%;
}

.wishlist-toggle .fa-heart {
    color: var(--pink);
}

.woocommerce #respond input#submit.alt,
.woocommerce a.button.alt,
.woocommerce button.button.alt,
.woocommerce input.button.alt {
    background-color: var(--primary);
}

.woocommerce div.product form.cart .group_table td:first-child {
    width: 11em;
}

.single-product div.product form.cart .quantity {
    float: none !important;
    margin: 0;
    display: inline-block;
    vertical-align: middle;
}

.product_meta {
    border-top: 1px solid rgba(0, 0, 0, .1);
    border-bottom: 1px solid rgba(0, 0, 0, .1);
    padding: 15px 0;
    margin-top: 30px;
    font-size: .9em;
}

.quantity .qty {
    padding: 0;
    width: 20%;
    min-width: 30px;
    max-height: 24px;
    text-align: center;
    border: 0;
    color: #777777;
    outline: 0;
    -webkit-appearance: none;
    background: 0 0;
    -moz-appearance: textfield;
}

/* Chrome, Safari, Edge, Opera */
.quantity input::-webkit-outer-spin-button,
.quantity input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Firefox */
.quantity input[type=number] {
    -moz-appearance: textfield;
}

.woocommerce div.product div.images .flex-control-thumbs li img {
    padding: 10px 5px;
}

.woocommerce div.product .woocommerce-tabs ul.tabs {
    border-top: 1px solid rgba(0, 0, 0, 0.1);
}

.woocommerce div.product .woocommerce-tabs ul.tabs li {
    border: none
}

.woocommerce div.product form.cart .group_table td {
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    padding: 5px;
    vertical-align: middle;
}

.woocommerce div.product form.cart .group_table td label {
    margin: 0px;
}

.woocommerce div.product form.cart table {
    width: 100%;
}

.woocommerce div.product form.cart table {
    margin-bottom: 20px;
}

.woocommerce .star-rating span {
    color: #ffb100;
}

.woocommerce-loop-product__title a {
    line-height: 2.5ex;
    height: 5ex;
    overflow: hidden;
    display: inline-block;
}

@keyframes loading {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

